C-1,C-2,C-3 병합 후 수정 및 개선: C-1,C-2,C-3 페이지 기능 개발 병합 후 코드를 수정합니다.
이 변경에는 다음과 같은 사항이 포함되어 있습니다.
1. 잘못된 변경 로직 및 저장 로직에 대한 수정
기본 프로필 이미지 이름을 null 대용으로 저장하는 것에 대한 수정.
2. 파일 업데이트 로직에 대한 수정 및 코드 개선
과도한 분기 처리로 인한 가독성 저하를 개선
3. 잘못된 예외 처리에 대한 개선
예외 중복 처리에 대한 코드 개선
4. 가정환경 선택지 보완
외벌이 가정의 선택지 추가